доработка, проверка кода

--- a/lab2_batmanov_aliev/lab2_batmanov_aliev.vcxproj
+++ b/lab2_batmanov_aliev/lab2_batmanov_aliev.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,7 +130,7 @@
   <ItemGroup>
     <ClCompile Include="CS.cpp" />
     <ClCompile Include="Help.cpp" />
-    <ClCompile Include="lab2_batmanov_aliev.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Pipe.cpp" />
   </ItemGroup>
   <ItemGroup>
