--- a/lab2_batmanov_aliev/lab2_batmanov_aliev.vcxproj.filters
+++ b/lab2_batmanov_aliev/lab2_batmanov_aliev.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="lab2_batmanov_aliev.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="CS.cpp">
